# parking-bot

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  build.sh  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  stop.ps1
.cursor/rules/: conventions.mdc  workflow.mdc
docs/: configuration.md  conventions.md  deployment.md  idea.md  security.md  tasklist.md  vision.md  workflow.md
src/: bot.py  config.py  gigachat_client.py  handlers.py  security.py
tests/: test_config.py  test_gigachat_client.py  test_handlers.py  test_security.py
