[project]
name = "parking-bot"
version = "0.1.0"
description = "Telegram bot for parking space lottery"
requires-python = ">=3.10"
dependencies = [
    "pyTelegramBotAPI>=4.14.0",
    "gigachat>=0.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

